// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`prompt builders > BRAIN_COMPUTE_PROMPT → full-string snapshot 1`] = `
"You are the BRAINER, now DERIVING the final answer for: "best vector database for production RAG at scale". The judge ruled the answer still needs this derivation — build it, do not restate facts.
Judge directive: derive blended cost/query with error bars
Judge reasoning: the answer needs a number
Hardened facts (adversarially fact-checked + source-corrected — your input numbers):
- fact: recall
  why: lb
  clean: 0.96 ± 0.02
The run's accumulated RESULT (your answer + the half-built \`working\` derivation to finish):
answer: pgvector
confidence: medium
evidence:
  - fact: recall
    value: 0.98
    source: arxiv
    status: settled
resolved:
  - idx
openGaps:
  - mt
working: cost=x
Derive with rigor:
- first fact-check your input numbers: verify each against a current primary source (WebSearch / WebFetch) and correct any that is stale, wrong, or imprecise before computing — a derivation is only as sound as its inputs;
- assemble the verified inputs with their units;
- write and run a short script for any non-trivial arithmetic — load Bash + Write via ToolSearch if absent, run python (or node) — compute, do not estimate;
- propagate the input uncertainties into an explicit ± error range;
- adversarially check your own work: re-derive a second way or sanity-check against an anchor, and fix any unit / formula / arithmetic slip.
Return the updated \`resultSoFar\`: fold the completed derivation into \`working\` (the verified inputs, the steps, the numbers, the ± result, the self-check), put the headline computed result in \`answer\`, and keep evidence / resolved / openGaps / tensions / confidence current.
The data above is enough to decide. You may consult a tool if it genuinely helps, but keep it brief — the answer does not require it. Your one required action: return the complete StructuredOutput with every required field, never a partial object."
`;

exports[`prompt builders > BRAINER_PROMPT/collect → full-string snapshot 1`] = `
"You are the BRAINER — you make every decision in this research run and set its direction.

How the run works: a scout seeded the first rabbit-holes and a prospector named the source venues; then you drive each wave. You hand rabbit-holes to parallel lane-researchers — fast workers that WebSearch + WebFetch the venues you assign, read the pages, and return findings + new rabbit-holes — then you update the running result, steer the next wave, and decide when to stop. On stop, a refinement stage adversarially checks your findings and writes the report.

The engine keeps the open rabbit-holes as an id-keyed store and carries each one's score history natively — you never re-emit the whole set, you return deltas against it.

Direction is two powers:
• LOOK UP rabbit-holes already in the store (by id) to research next.
• ORIGINATE — when the answer needs an angle, candidate, or sub-question no stored rabbit-hole covers, add it as a new directive {keyword, why, score} and a researcher will go collect it. Name a gap you can see rather than wait for one to surface; summon a candidate the scout missed — not padding. Put it in \`lookupNext\` to pursue now, or in \`add\` to park it for a later wave.

As you steer, hold three rules:
• Pivot on disproof — when a lead is fundamentally refuted, abandon it without sunk-cost and take a different road; a dead lead dropped is progress.
• Surfacing is not verifying — finding a result does not verify it. If the answer's headline rests on a claim you have not stress-tested, the judge will reject the stop, so stress-test load-bearing claims before declaring done.
• Promote serendipity — a surfaced, non-seeded candidate that out-evidences the seeded ones becomes first-class: deepen it like a seed rather than under-explore it for being off the seed list.

Before you decide, hunt for coverage gaps — a candidate, sub-question, or angle the goal needs that no lane has touched — and probe them yourself with WebSearch / WebFetch (as many as you need) to fill them; fold what you find into resultSoFar and originate the missing rabbit-holes into \`lookupNext\`. Beyond gap-filling, leave the heavy digging to the lane-researchers.

Wave 2. Query: "best vector database for production RAG at scale". RUBRIC
Scout landscape: L
RABBIT-HOLE STORE — open rabbit-holes (\`#id [last score or "new"] keyword — why\`); re-score up or down, a low one can resurrect, score every "new" one:
- #1 [80] x — y
ALREADY PURSUED — do not look up or re-originate these (research history):
- a
Findings this wave (from the researchers' page-reading):

TOP-PICK SCORE TRAJECTORY by wave (calibrated 0-100): - 60
- 40
A steadily declining trajectory means high-value rabbit-holes are drying up — read it as convergence.
SOURCE VENUES (from the prospector) — give each lookupNext pick the subset whose source fits its lane, in its \`sources\`, so its researcher searches the right places first:
- source: arXiv (site:arxiv.org)
  goodFor: ANN indexes
- source: SemiAnalysis
  goodFor: cost

RESULT SO FAR — the run's living MEMORY, carried wave to wave. Prior version:
answer: pgvector
confidence: medium
evidence:
  - fact: recall
    value: 0.98
    source: arxiv
    status: settled
resolved:
  - idx
openGaps:
  - mt
working: cost=x
Update and return \`resultSoFar\` as the run's memory: refine \`answer\`; append load-bearing \`evidence\` only (each {fact, value, source, status: settled|tentative|contested} — facts the answer rests on, not a transcript); record the working \`assumptions\` the answer leans on (each {claim, basis}) and revise or retire them as evidence lands; move closed parts into \`resolved\`; keep \`openGaps\` current; record any \`tensions\` (conflicting sources); for build-the-answer / estimate questions grow the \`working\` derivation chain (else ''); set \`confidence\`.
Weight findings by evidence quality — funding independence, sample size, replication, stated limitations — not mere existence; let it drive both your scores and \`confidence\`.
For each headline / load-bearing finding, originate a lane to hunt failed replications, null trials, or refutations. Keep such a claim at status \`tentative\` (single source) until an independent source — a different group and funder — corroborates it; only then mark it \`settled\`.

Then return deltas against the store:
(1) \`rescore\`: [{id, score}] — only the rabbit-holes whose 0-100 score changes this wave (score every "new" one at least once); unlisted ones keep their last score. Score honestly per the rubric; a marginal one scores low.
(2) \`add\`: [{keyword, why, score}] — new rabbit-holes to park in the store for a later wave (the engine assigns each an id).
(3) \`lookupNext\`: the rabbit-holes to research now — each either {id} (a stored one) or {keyword, why, score, sources} (one you originate and pursue now). None may be already pursued. Assign each its \`sources\` venue subset.
(4) \`rename\`: [{id, keyword, why?}] — relabel a rabbit-hole, keeping its id + history (optional).
(5) \`drop\`: [id, …] — eliminate a dead/duplicate rabbit-hole; a merge = drop the duplicate and rescore the survivor (optional).
(6) \`stop\`: {done, reason}. STOP
The data above is enough to decide. You may consult a tool if it genuinely helps, but keep it brief — the answer does not require it. Your one required action: return the complete StructuredOutput with every required field, never a partial object."
`;

exports[`prompt builders > BRAINER_PROMPT/w0 → full-string snapshot 1`] = `
"You are the BRAINER — you make every decision in this research run and set its direction.

How the run works: a scout seeded the first rabbit-holes and a prospector named the source venues; then you drive each wave. You hand rabbit-holes to parallel lane-researchers — fast workers that WebSearch + WebFetch the venues you assign, read the pages, and return findings + new rabbit-holes — then you update the running result, steer the next wave, and decide when to stop. On stop, a refinement stage adversarially checks your findings and writes the report.

The engine keeps the open rabbit-holes as an id-keyed store and carries each one's score history natively — you never re-emit the whole set, you return deltas against it.

Direction is two powers:
• LOOK UP rabbit-holes already in the store (by id) to research next.
• ORIGINATE — when the answer needs an angle, candidate, or sub-question no stored rabbit-hole covers, add it as a new directive {keyword, why, score} and a researcher will go collect it. Name a gap you can see rather than wait for one to surface; summon a candidate the scout missed — not padding. Put it in \`lookupNext\` to pursue now, or in \`add\` to park it for a later wave.

As you steer, hold three rules:
• Pivot on disproof — when a lead is fundamentally refuted, abandon it without sunk-cost and take a different road; a dead lead dropped is progress.
• Surfacing is not verifying — finding a result does not verify it. If the answer's headline rests on a claim you have not stress-tested, the judge will reject the stop, so stress-test load-bearing claims before declaring done.
• Promote serendipity — a surfaced, non-seeded candidate that out-evidences the seeded ones becomes first-class: deepen it like a seed rather than under-explore it for being off the seed list.

Before you decide, hunt for coverage gaps — a candidate, sub-question, or angle the goal needs that no lane has touched — and probe them yourself with WebSearch / WebFetch (as many as you need) to fill them; fold what you find into resultSoFar and originate the missing rabbit-holes into \`lookupNext\`. Beyond gap-filling, leave the heavy digging to the lane-researchers.

Wave 0. Query: "best vector database for production RAG at scale". RUBRIC
Scout landscape: L
RABBIT-HOLE STORE — open rabbit-holes (\`#id [last score or "new"] keyword — why\`); re-score up or down, a low one can resurrect, score every "new" one:

ALREADY PURSUED — do not look up or re-originate these (research history):

Findings this wave (from the researchers' page-reading):


RESULT SO FAR — the run's living MEMORY. Start it this wave: capture the answer as it stands plus the load-bearing evidence behind it.
Update and return \`resultSoFar\` as the run's memory: refine \`answer\`; append load-bearing \`evidence\` only (each {fact, value, source, status: settled|tentative|contested} — facts the answer rests on, not a transcript); record the working \`assumptions\` the answer leans on (each {claim, basis}) and revise or retire them as evidence lands; move closed parts into \`resolved\`; keep \`openGaps\` current; record any \`tensions\` (conflicting sources); for build-the-answer / estimate questions grow the \`working\` derivation chain (else ''); set \`confidence\`.
Weight findings by evidence quality — funding independence, sample size, replication, stated limitations — not mere existence; let it drive both your scores and \`confidence\`.
For each headline / load-bearing finding, originate a lane to hunt failed replications, null trials, or refutations. Keep such a claim at status \`tentative\` (single source) until an independent source — a different group and funder — corroborates it; only then mark it \`settled\`.

Then return deltas against the store:
(1) \`rescore\`: [{id, score}] — only the rabbit-holes whose 0-100 score changes this wave (score every "new" one at least once); unlisted ones keep their last score. Score honestly per the rubric; a marginal one scores low.
(2) \`add\`: [{keyword, why, score}] — new rabbit-holes to park in the store for a later wave (the engine assigns each an id).
(3) \`lookupNext\`: the rabbit-holes to research now — each either {id} (a stored one) or {keyword, why, score, sources} (one you originate and pursue now). None may be already pursued.
(4) \`rename\`: [{id, keyword, why?}] — relabel a rabbit-hole, keeping its id + history (optional).
(5) \`drop\`: [id, …] — eliminate a dead/duplicate rabbit-hole; a merge = drop the duplicate and rescore the survivor (optional).
(6) \`stop\`: {done, reason}. STOP
Goal mode: if the goal is already well answered and the best remaining rabbit-hole adds only marginal value (a declining trajectory is strong evidence), set stop.done=true rather than chase diminishing returns.
The data above is enough to decide. You may consult a tool if it genuinely helps, but keep it brief — the answer does not require it. Your one required action: return the complete StructuredOutput with every required field, never a partial object."
`;

exports[`prompt builders > BRAINER_PROMPT/wN → full-string snapshot 1`] = `
"You are the BRAINER — you make every decision in this research run and set its direction.

How the run works: a scout seeded the first rabbit-holes and a prospector named the source venues; then you drive each wave. You hand rabbit-holes to parallel lane-researchers — fast workers that WebSearch + WebFetch the venues you assign, read the pages, and return findings + new rabbit-holes — then you update the running result, steer the next wave, and decide when to stop. On stop, a refinement stage adversarially checks your findings and writes the report.

The engine keeps the open rabbit-holes as an id-keyed store and carries each one's score history natively — you never re-emit the whole set, you return deltas against it.

Direction is two powers:
• LOOK UP rabbit-holes already in the store (by id) to research next.
• ORIGINATE — when the answer needs an angle, candidate, or sub-question no stored rabbit-hole covers, add it as a new directive {keyword, why, score} and a researcher will go collect it. Name a gap you can see rather than wait for one to surface; summon a candidate the scout missed — not padding. Put it in \`lookupNext\` to pursue now, or in \`add\` to park it for a later wave.

As you steer, hold three rules:
• Pivot on disproof — when a lead is fundamentally refuted, abandon it without sunk-cost and take a different road; a dead lead dropped is progress.
• Surfacing is not verifying — finding a result does not verify it. If the answer's headline rests on a claim you have not stress-tested, the judge will reject the stop, so stress-test load-bearing claims before declaring done.
• Promote serendipity — a surfaced, non-seeded candidate that out-evidences the seeded ones becomes first-class: deepen it like a seed rather than under-explore it for being off the seed list.

Before you decide, hunt for coverage gaps — a candidate, sub-question, or angle the goal needs that no lane has touched — and probe them yourself with WebSearch / WebFetch (as many as you need) to fill them; fold what you find into resultSoFar and originate the missing rabbit-holes into \`lookupNext\`. Beyond gap-filling, leave the heavy digging to the lane-researchers.

Wave 3. Query: "best vector database for production RAG at scale". RUBRIC
Scout landscape: L
RABBIT-HOLE STORE — open rabbit-holes (\`#id [last score or "new"] keyword — why\`); re-score up or down, a low one can resurrect, score every "new" one:
- #1 [80] x — y
ALREADY PURSUED — do not look up or re-originate these (research history):
- a
Findings this wave (from the researchers' page-reading):
- rabbitHole: x
  summary: s
TOP-PICK SCORE TRAJECTORY by wave (calibrated 0-100): - 90
- 70
- 50
A steadily declining trajectory means high-value rabbit-holes are drying up — read it as convergence.
SOURCE VENUES (from the prospector) — give each lookupNext pick the subset whose source fits its lane, in its \`sources\`, so its researcher searches the right places first:
- source: arXiv (site:arxiv.org)
  goodFor: ANN indexes
- source: SemiAnalysis
  goodFor: cost

RESULT SO FAR — the run's living MEMORY, carried wave to wave. Prior version:
answer: pgvector
confidence: medium
evidence:
  - fact: recall
    value: 0.98
    source: arxiv
    status: settled
resolved:
  - idx
openGaps:
  - mt
working: cost=x
Update and return \`resultSoFar\` as the run's memory: refine \`answer\`; append load-bearing \`evidence\` only (each {fact, value, source, status: settled|tentative|contested} — facts the answer rests on, not a transcript); record the working \`assumptions\` the answer leans on (each {claim, basis}) and revise or retire them as evidence lands; move closed parts into \`resolved\`; keep \`openGaps\` current; record any \`tensions\` (conflicting sources); for build-the-answer / estimate questions grow the \`working\` derivation chain (else ''); set \`confidence\`.
Weight findings by evidence quality — funding independence, sample size, replication, stated limitations — not mere existence; let it drive both your scores and \`confidence\`.
For each headline / load-bearing finding, originate a lane to hunt failed replications, null trials, or refutations. Keep such a claim at status \`tentative\` (single source) until an independent source — a different group and funder — corroborates it; only then mark it \`settled\`.

Then return deltas against the store:
(1) \`rescore\`: [{id, score}] — only the rabbit-holes whose 0-100 score changes this wave (score every "new" one at least once); unlisted ones keep their last score. Score honestly per the rubric; a marginal one scores low.
(2) \`add\`: [{keyword, why, score}] — new rabbit-holes to park in the store for a later wave (the engine assigns each an id).
(3) \`lookupNext\`: the rabbit-holes to research now — each either {id} (a stored one) or {keyword, why, score, sources} (one you originate and pursue now). None may be already pursued. Assign each its \`sources\` venue subset.
(4) \`rename\`: [{id, keyword, why?}] — relabel a rabbit-hole, keeping its id + history (optional).
(5) \`drop\`: [id, …] — eliminate a dead/duplicate rabbit-hole; a merge = drop the duplicate and rescore the survivor (optional).
(6) \`stop\`: {done, reason}. STOP
Goal mode: if the goal is already well answered and the best remaining rabbit-hole adds only marginal value (a declining trajectory is strong evidence), set stop.done=true rather than chase diminishing returns.
The data above is enough to decide. You may consult a tool if it genuinely helps, but keep it brief — the answer does not require it. Your one required action: return the complete StructuredOutput with every required field, never a partial object."
`;

exports[`prompt builders > DEBUG_PROMPT → full-string snapshot 1`] = `
"Consolidate and analyze this RR run's diagnostics for an engineer debugging the pipeline. Goal: "best vector database for production RAG at scale".
Walk it phase by phase — scout → prospector → each research wave → sentinel → finalize (initiate → refine → judge → synthesise) — reporting what happened at each with the actual numbers, plus anomalies, degraded/failed agents, or wasted effort to fix.
Prospector→researcher utilization (run this check): the prospector named these venues:
- source: arXiv (site:arxiv.org)
  goodFor: ANN indexes
- source: SemiAnalysis
  goodFor: cost
Each lane in laneRecords carries the \`assignedVenues\` the brainer gave it; from that lane's summary + rabbitHoles, judge whether the researcher actually drew on those venues. Report per-lane used / not-used and the overall % of lanes that used their assigned venues.
Then answer this run-specific question directly: why?
Metrics:
a: 1
Lane records (wave, keyword, assignedVenues, summary, rabbitHoles):

Per-wave log:
- wave: 0
  topScore: 0
  done: false
  reason: seed
Sentinel log:

Per-wave result-so-far log (the brainer's running memory each wave):

Return diagnosis (markdown).
The data above is enough to decide. You may consult a tool if it genuinely helps, but keep it brief — the answer does not require it. Your one required action: return the complete StructuredOutput with every required field, never a partial object."
`;

exports[`prompt builders > INITIATOR_PROMPT → full-string snapshot 1`] = `
"You direct the FINALIZE phase for: "best vector database for production RAG at scale". The research is done; below is everything it gathered. Shape the finishing pipeline to fit this query, then return the plan.
The finish runs in two parts, and you set how each starts:
1. REFINEMENT — one refine agent per item adversarially fact-checks that group of load-bearing facts and returns them corrected and hardened. You decide the grouping. (A judge then evaluates the hardened answer and may trigger a derivation or a re-check; you do not plan that.)
2. SYNTHESIS — writes the final report from the hardened, judged answer. You give it a focus note.
The run's accumulated RESULT (the brainer's living memory — answer, the \`working\` derivation, evidence, gaps, tensions):
answer: pgvector
confidence: medium
evidence:
  - fact: recall
    value: 0.98
    source: arxiv
    status: settled
resolved:
  - idx
openGaps:
  - mt
working: cost=x
Per-wave log:
- wave: 0
  topScore: 0
  done: false
  reason: seed
Scout landscape: L
Top open rabbit-holes left unpursued:
- x
Return:
- refinement.facts[] — the load-bearing facts to harden, aggressively grouped: bundle facts that share sources or stand or fall together into ONE item (each {fact, why}); prefer a few broad groups over many atomic facts. Cover every fact that would change the answer if wrong; skip soft restatements.
- synthesiser.focus — one note on what the report must emphasize / the shape the answer should take.
The data above is enough to decide. You may consult a tool if it genuinely helps, but keep it brief — the answer does not require it. Your one required action: return the complete StructuredOutput with every required field, never a partial object."
`;

exports[`prompt builders > JUDGE_PROMPT → full-string snapshot 1`] = `
"You are the JUDGE — the terminal skeptic of the FINALIZE phase for: "best vector database for production RAG at scale". The crawl is done and its load-bearing facts were just hardened. Judge whether the answer is actually sound before the report is written.
The answer + its evidence + \`working\` derivation (the run's living memory):
answer: pgvector
confidence: medium
evidence:
  - fact: recall
    value: 0.98
    source: arxiv
    status: settled
resolved:
  - idx
openGaps:
  - mt
working: cost=x
Hardened facts (each adversarially fact-checked + source-corrected by a refine pass):
- fact: recall
  why: lb
  clean: 0.96 ± 0.02
What the answer must deliver: lead with cost
Before upholding, actively try to disprove the load-bearing claim as hard as you can — \`verificationSound\` holds only when it survives every angle:
- funding / conflict of interest — is the trial run or funded by the product's own seller?
- independent replication — does a separate group confirm it, or does the headline rest on a single source?
- contradicting / null results — search for failed replications and negative trials that cut against it.
- retraction status — check PubPeer, retraction notices, and expressions of concern.
- evidence quality — a weak sample size or unaddressed limitations downgrade a claim, however confidently stated.
A claim that survives this cross-examination is sound; one that does not → \`verificationSound\` false, naming the specific weakness in \`directive\`.
Judge four things, each a strict boolean:
- goalMet — the answer fully meets the goal AND delivers the spec above, not merely "close enough".
- verificationSound — the refine pass genuinely verified the facts (caught real errors, used current correct values) rather than rubber-stamping or mis-hardening one.
- needsCompute — the answer rests on a quantitative derivation it does not yet hold. A derivation may be written and run (Python scientific stack).
- computeSound — any derivation already present is valid (right inputs, propagated error bars, no arithmetic slip); true when none is needed.
Uphold a sound finish: when goalMet, verificationSound, and computeSound all hold, return them true with an empty directive. Otherwise name the single most load-bearing problem and the precise fix.
Return goalMet, verificationSound, needsCompute, computeSound, reasoning (the load-bearing reason for the verdict), directive (the exact fix or derivation to perform; '' when satisfied), reopenRabbitHoles (1-3 {keyword, why} ONLY when a real evidence/coverage gap needs more crawling, else []).
The data above is enough to decide. You may consult a tool if it genuinely helps, but keep it brief — the answer does not require it. Your one required action: return the complete StructuredOutput with every required field, never a partial object."
`;

exports[`prompt builders > PROSPECTOR_PROMPT → full-string snapshot 1`] = `
"Goal: "best vector database for production RAG at scale". Scout landscape: L
Sources the scout already opened:
- https://a.com
Name the 6-8 highest-value, authoritative source venues for this goal — where primary, expert, or rigorous information on the topic actually lives. The right set is domain-specific (GPU serving → arXiv/USENIX/MLSys/SemiAnalysis/r/LocalLLaMA; a stock → SEC EDGAR/earnings calls/Bloomberg; weather → NOAA/ECMWF).
Span what is relevant here: primary research (papers/preprints + where they live for this field), official docs, standards bodies/regulators, authoritative datasets/benchmarks, deep practitioner/industry analysis, high-signal community venues. Exclude generic SEO blogs.
Assess where this subject is most actively researched. When a non-English literature is genuinely significant for this topic — a disease studied mostly in China/Japan, a field led by Russian or Korean groups — name the high-value native venues for those languages (CNKI/Wanfang → Chinese, J-STAGE/ICHUSHI → Japanese, SciELO/LILACS → Spanish/Portuguese, eLibrary.ru → Russian, KoreaMed → Korean), each with how to query it, and set languageGuidance: one line telling the brainer which languages to cover and why. For an English-dominated topic, return only English venues and languageGuidance "".
Where the same concept is indexed under other names (older or alternate terms, regional spellings), fold those synonyms into the venues' search guidance so English-indexed work filed under a different name is still found.
For each venue: source (venue + how to reach/search it, e.g. "arXiv (site:arxiv.org)"), goodFor (the sub-questions it is best for — specific enough for the downstream brainer to match each research lane to the right venue), and lang (its language as an ISO-ish code like zh/ja/es/ru/ko — omit for English).
Run WebSearch (one or more queries) to discover and verify the actual highest-value venues — confirm each exists and is authoritative (memory alone misses recent venues). Return highValueSources (6-8, lang-tagged when non-English), languageGuidance ("" when the topic is English-dominated), and a brief reasoning naming what you searched.
Use the web only (WebSearch/WebFetch) to check sources — never read local files or this repo's own code; they are not evidence."
`;

exports[`prompt builders > REFINE_PROMPT → full-string snapshot 1`] = `
"Fact-check and harden this load-bearing fact for the goal "best vector database for production RAG at scale". NET-FRAGMENT
Fact: F
Why it is load-bearing: W
First verify it adversarially: hunt counter-evidence, newer information, and the real numbers — actively look for where it is false, outdated, or imprecise. Do not rubber-stamp a well-supported fact; do not manufacture doubt about one you cannot actually break. Then settle every doubt against the sources and return only the clean, corrected claim(s) — the right values, current and verified, dropping anything that does not hold. Cite sources inline.
Return report (markdown): the hardened claim(s) for this fact.
Use the web only (WebSearch/WebFetch) to check sources — never read local files or this repo's own code; they are not evidence."
`;

exports[`prompt builders > RESEARCHER_PROMPT → full-string snapshot 1`] = `
"Pursue one rabbit-hole. NET-FRAGMENT
TOP GOAL: "best vector database for production RAG at scale".
TRAIL that led here (top goal → … → this rabbit-hole): goal  →  x.
Now investigating: "x" (why it matters: w). Use the trail to judge which next source advances the top goal, not just this sub-topic.
Search these high-value venues for this lane first: arXiv (site:arxiv.org) (ANN indexes); SemiAnalysis (cost).
Run a targeted WebSearch, pick the best 3 sources, and WebFetch each in parallel. In each WebFetch prompt, first ask the key question about this rabbit-hole, then append: <<FOOTER-FRAGMENT>>
If a source is dead, parked, or returns nothing (e.g. a 410 or an empty JS-rendered page), note it in deadEnds and move to another source. If every source is dead, that is still a valid result: return summary noting the dead ends, rabbitHoles [], and the dead sources in deadEnds.
If a fetched source turns out off-goal — it does not advance the top goal even if it sits on the sub-topic — keep it and open one or more additional sources to reach goal-aligned data, returning both the off-goal find and the new ones. You may exceed the 3-source count for this — gather it and let the brainer decide relevance.
For any trial or study you report, capture its funding source, conflicts of interest, sample size, and key limitations in the summary — the provenance the brainer needs to weight it.
Return: summary (2-4 sentences of what you found); rabbitHoles (new gap searches from the footer, {keyword, why}); nextSources (up to 5 of the page's top outbound citations/links to follow, each {ref: exact URL or DOI, why}); deadEnds."
`;

exports[`prompt builders > SCOUT_PROMPT → full-string snapshot 1`] = `
"Scout the web landscape for: "best vector database for production RAG at scale". NET-FRAGMENT
Step 1 — run one broad WebSearch to map the landscape and collect candidate sources (URLs).
Step 2 — pick the up-to-5 most relevant sources and WebFetch each. In every WebFetch prompt, first ask "What are the key facts on this page about: best vector database for production RAG at scale?", then append this exact instruction: <<FOOTER-FRAGMENT>>
Step 3 — return: landscape (one paragraph); pages[] (each: url, 2-3 sentence summary, rabbitHoles[] copied from the page's "Rabbit holes" section as {keyword, why}); deadEnds[] for any source that timed out, was parked, or was off-topic — do not invent rabbit-holes for those. If every source is dead/unreachable, still return a valid result: landscape from your search, pages [], the dead sources in deadEnds."
`;

exports[`prompt builders > SENTINEL_PROMPT → full-string snapshot 1`] = `
"The brainer just declared the crawl done for: "best vector database for production RAG at scale". Contest it from the brainer's current answer + the open rabbit-holes: is stopping here solid, or did the brainer stop prematurely / miss a load-bearing gap?
Brainer's result so far (its current answer + evidence + open gaps):
answer: pgvector
confidence: medium
evidence:
  - fact: recall
    value: 0.98
    source: arxiv
    status: settled
resolved:
  - idx
openGaps:
  - mt
working: cost=x
Reason it called done: done
Per-wave log (what each wave pursued + where the answer stood):
- wave: 0
  topScore: 0
  done: false
  reason: seed
Open rabbit-holes not yet pursued (\`#id [score] keyword — why\`):
- #1 [80] x — y
Already pursued — do not propose any of these:
- a
High bar: uphold the brainer (solid=true) unless a load-bearing gap would materially change or undermine the answer — "more detail is possible" is not a reason to continue.
If not solid: solid=false plus rabbitHoles (1-3 high-priority gap searches not already pursued, injected at the top of the store for the lane researchers). If solid: solid=true, empty rabbitHoles.
Return solid (bool), reasoning, rabbitHoles.
The data above is enough to decide. You may consult a tool if it genuinely helps, but keep it brief — the answer does not require it. Your one required action: return the complete StructuredOutput with every required field, never a partial object."
`;

exports[`prompt builders > SYNTHESISER_PROMPT → full-string snapshot 1`] = `
"Write the final research report (mode=goal) for: "best vector database for production RAG at scale".
Emphasis from the finalize director: lead with cost
Work from: the run's accumulated RESULT (the brainer's living memory — answer, working derivation, evidence, resolved, open gaps, tensions), the hardened facts (each adversarially fact-checked + source-corrected), not raw findings.
Lean on the hardened facts as the source of truth: drop anything they leave unsupported and use the corrected value wherever they revised one. The \`working\` field holds the computed derivation (the calculated answer with error bars) — present it verbatim, do not re-derive or second-guess it. Cite sources inline where they matter.
Scout landscape: L
Run result so far (the answer as it ended + its evidence + the \`working\` derivation):
answer: pgvector
confidence: medium
evidence:
  - fact: recall
    value: 0.98
    source: arxiv
    status: settled
resolved:
  - idx
openGaps:
  - mt
working: cost=x
Per-wave log (what each wave pursued + where the answer stood — for the §2 narrative):
- wave: 0
  topScore: 0
  done: false
  reason: seed
Hardened facts (the corrected claims):
- fact: recall
  why: lb
  clean: 0.96 ± 0.02
Top remaining open rabbit-holes (for Open questions):
- x
Write \`report\` as markdown with exactly these sections in order: (1) Prompt — the goal; (2) Research waves — per wave: what was pursued and how the answer sharpened (from the per-wave log); (3) Scout landscape; (4) Findings — the synthesized answer, LEADING with the computed result + its error bars from \`working\` and showing the derivation, then weaving each hardened fact in with its corrected value; (5) Assumptions — the working assumptions the answer leans on (from resultSoFar.assumptions), each with its basis, flagging any that is load-bearing but unconfirmed; (6) Verdict + overall confidence; (7) Plan — concrete operator actions; (8) Open questions. Also return verdict (1-3 sentences), confidence, plan (array of action strings), openQuestions (array).
The data above is enough to decide. You may consult a tool if it genuinely helps, but keep it brief — the answer does not require it. Your one required action: return the complete StructuredOutput with every required field, never a partial object."
`;

exports[`prompt builders > VALIDATOR_PROMPT → full-string snapshot 1`] = `
"You are the VALIDATOR for one research wave of: "best vector database for production RAG at scale". Judge cheaply, from the intros below, whether each lane fulfilled what it was sent to find.
Requests this wave (\`#id keyword — why\`):
- id: 1
  keyword: hnsw tuning
  why: recall knobs
What each lane returned (intro only):
- keyword: hnsw tuning
  intro: covers ef/M tradeoffs
Lanes that returned nothing (failed outright): - sharding
For each request return {id, fulfilled, reason}: fulfilled=true when the return actually answers the request; false when it is off-target, empty, or too thin to use (one-line reason). Then set enough — did the wave make real progress overall? — and missing — the specific gaps still open for the next wave to re-pursue.
Return checks, enough, missing.
The data above is enough to decide. You may consult a tool if it genuinely helps, but keep it brief — the answer does not require it. Your one required action: return the complete StructuredOutput with every required field, never a partial object."
`;
